--- a/frontend/src/components/Home/HomePage.css
+++ b/frontend/src/components/Home/HomePage.css
@@ -15,12 +15,13 @@
     font-size: 36px;
     font-weight: bold;
     margin-bottom: 20px;
-    color: #7A5CFA; /* Primary color */
+    color: #ffffff; /* Primary color */
   }
   
   .welcome-text {
     font-size: 20px;
     line-height: 1.5;
-    color: #333; /* Text color */
+    color: #b4b4b4; /* Text color */
   }
+  
   
